@@ -624,7 +624,7 @@ BEGIN
     LTEXT           "&Music Volume",IDC_STATIC_MUSIC,14,91,45,8
     CONTROL         "Slider1",IDC_MUSIC_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,9,102,110,18
     LTEXT           "General output Sound Device",IDC_STATIC_SOUNDDEVICE,124,11,170,10
-    LISTBOX         IDC_SoundList,124,24,170,40,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         258,124,24,170,40,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Backglass specific Sound Device",IDC_STATIC_SOUNDDEVICE2,123,73,170,10
     LISTBOX         IDC_SoundListBG,123,86,171,40,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     DEFPUSHBUTTON   "OK",IDOK,350,141,50,14
@@ -1790,7 +1790,7 @@ BEGIN
     EDITTEXT        DISPID_ROTRA9,24,184,40,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 195
+IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 206
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1799,25 +1799,27 @@ BEGIN
     PUSHBUTTON      "Export Mesh",IDC_EXPORT_MESH_BUTTON,65,13,46,14
     LTEXT           "Image",IDC_STATIC,7,34,20,8
     COMBOBOX        DISPID_Image,7,43,111,124,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Normal Map",IDC_STATIC,7,60,39,8
-    COMBOBOX        DISPID_Image2,7,69,111,69,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Material",IDC_STATIC,7,85,63,9
-    COMBOBOX        IDC_MATERIAL_COMBO,7,93,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,109,56,10
-    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,119,69,10
+    LTEXT           "Normal Map",IDC_STATIC,7,70,39,8
+    COMBOBOX        DISPID_Image2,7,79,111,69,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Material",IDC_STATIC,7,95,63,9
+    COMBOBOX        IDC_MATERIAL_COMBO,7,103,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,119,56,10
+    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,129,69,10
     CONTROL         "Reflection Enabled",IDC_PRIM_REFLECT_ENABLE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,129,76,10
-    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,139,82,10
-    LTEXT           "Depth Bias",IDC_STATIC,83,110,36,8
-    EDITTEXT        IDC_DEPTH_BIAS,82,119,36,12,ES_AUTOHSCROLL
-    LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,150,74,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,148,36,12,ES_AUTOHSCROLL
-    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,165,78,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,163,36,12,ES_AUTOHSCROLL
-    LTEXT           "Legacy/Sides",IDC_STATIC,7,179,45,8
-    EDITTEXT        101,53,178,20,12,ES_AUTOHSCROLL
-    LTEXT           "Editor",IDC_STATIC,77,179,20,8
-    EDITTEXT        IDC_EDGE_FACTOR_UI,98,178,20,12,ES_AUTOHSCROLL
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,139,76,10
+    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,149,82,10
+    LTEXT           "Depth Bias",IDC_STATIC,83,120,36,8
+    EDITTEXT        IDC_DEPTH_BIAS,82,129,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,160,74,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,158,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,175,78,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,173,36,12,ES_AUTOHSCROLL
+    LTEXT           "Legacy/Sides",IDC_STATIC,7,189,45,8
+    EDITTEXT        101,53,188,20,12,ES_AUTOHSCROLL
+    LTEXT           "Editor",IDC_STATIC,77,189,20,8
+    EDITTEXT        IDC_EDGE_FACTOR_UI,98,188,20,12,ES_AUTOHSCROLL
+    CONTROL         "Display &Image (not perfect)",IDC_DISPLAY_TEXTURE_CHECKBOX,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,57,105,10
 END
 
 IDD_PROPPLUNGER_VISUALS DIALOGEX 0, 0, 125, 291
@@ -2596,7 +2598,7 @@ BEGIN
 
     IDD_PROPPRIMITIVE_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 192
+        BOTTOMMARGIN, 203
     END
 
     IDD_PROPPLUNGER_VISUALS, DIALOG
